--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.0.1",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
